Add e-mail contact form

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "homepage": "https://kizwolak.com",
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "blaze-slider": "^1.9.1",
+    "email-js": "^2.0.2",
     "react": "^18.2.0",
     "react-blaze-slider": "^1.7.2",
     "react-dom": "^18.2.0",
