--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "gh-pages": "^5.0.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
